Improve support for special chars in password
Use single instead of double quotes to protect against $

--- a/syncCraft.sample.cfg
+++ b/syncCraft.sample.cfg
@@ -7,7 +7,7 @@ remote_db_host=localhost
 remote_db_name=mattstauffer_co
 # Remote database username
 remote_db_username=mattstaufferSqlUser
-# Remote database password (passwords containing special characters * ? [ < > & ; ! | $ ( ) should be double-quoted, e.g "pAsS>0rd")
+# Remote database password (passwords containing special characters * ? [ < > & ; ! | $ ( ) should be single-quoted, e.g 'pAsS>0rd')
 remote_db_password=mySuperSecretPassword
 # SSH string to connect to your remote server (e.g. 'myuser@myhost.com')
 ssh_string=matt@141.24.1.4
